
Revision 0.2.0, released XX-05-2017
-----------------------------------

- Server message classifiers made available at the client side
  for message routing purposes
- Examples and docs on transparent proxy mode and running at
  secondary interfaces added
- Performance of the "oidfilter" plugin improved on large
  access lists

Revision 0.1.0, released 07-05-2017
-----------------------------------

- SNMP TRAP PDU forwarding implemented
- SNMP PDU OIDs filtering plugin implemented
- The "rewrite" plugin reworked to match OIDs and regexp values
- The "logger" plugin refactored to understand more macros; macro names used
  for logging and system configuration options unified
- Single SNMP request scope context is now served to the plugins (plugin
  API version bumped)
- The ${config-dir} macro support added to some configuration options
- Sphinx documentation added

Revision 0.0.3, released 23-04-2017
-----------------------------------

- Sphinx docs added
- PEP8, code style and hardening
- Unspecified trunk-crypto-key now indicates disabled trunk encryption.
- Fix to error-indication usage to comply with newer pysnmp
- Fix to __doc__ use in setup.py to make -O0 installation mode working.
- Fix to PID file creation when running Python 3.
- Copyright notes added to source files
- Author's e-mail changed, copyright extended to year 2017

Revision 0.0.2, released 28-09-2015
-----------------------------------

- Minor fixes towards Python 2.4 compatibility.

Revision 0.0.2rc1, released 14-02-2015
--------------------------------------

- Loadable extention plugin modules infrastructure first introduced.
- Experimental SNMP PDU var-binds logging added.
- Wheel distribution format now supported.

Revision 0.0.2rc0, released 21-01-2015
--------------------------------------

- Multiple fixes supporting Python 2.4-3.4 compatibility.
- Configuration options renamed for better clarity.
- Both source and destination network addresses of SNMP entities