@@ -8,6 +8,8 @@ Revision 0.2.0, released XX-05-2017
   secondary interfaces added
 - Performance of the "oidfilter" plugin improved on large
   access lists
+- Enforced "oidfilter" configuration consistency by adding
+  a bunch of load-time checks
 
 Revision 0.1.0, released 07-05-2017
 -----------------------------------
